--- a/css/css-style.css
+++ b/css/css-style.css
@@ -274,8 +274,8 @@ body {
   align-items: center;
   width: 50%;
   position: relative;
-  filter: drop-shadow(0px 0px 6px #1eff00);
-  -webkit-filter: drop-shadow(0px 0px 6px #1eff00);
+  filter: drop-shadow(0px 0px 6px #ffffff);
+  -webkit-filter: drop-shadow(0px 0px 6px #ffffff);
   -webkit-animation: bounce-in-right 1.1s both;
   animation: bounce-in-right 1.1s both;
 }
