--- a/css/css-style.css
+++ b/css/css-style.css
@@ -113,7 +113,7 @@ body {
 
 .copyright span{
   display: inline-block;
-  font-family: "Inter", sans-serif;
+  font-family: HeyComic;
   font-size: 16px;
   color: #ffffff;
   padding-top: 12px;
@@ -165,28 +165,33 @@ body {
 }
 
 .header__right {
+  display: flex;
+  flex-direction: row;
   width: auto;
   margin-left: auto;
-  filter: drop-shadow(0px 0px 12px #ffffff);
-  -webkit-filter: drop-shadow(0px 0px 12px #ffffff);
+  justify-content: center;
+  filter: drop-shadow(0px 0px 6px #ffffff);
+  -webkit-filter: drop-shadow(0px 0px 6px #ffffff);
   -webkit-animation: bounce-in-right 1.1s both;
-	        animation: bounce-in-right 1.1s both;
+  animation: bounce-in-right 1.1s both;
 }
 .btn-head {
   background:#000000;
+  font-family: HeyComic;
   text-align: center;
   font-weight: 700;
   text-transform: uppercase;
   border-radius: 12px;
   color: #ffffff;
-  padding: 21px 30px;
+  padding: 21px 40px;
+  margin-left: 20px;
   transition: all 0.4s ease 0s;
   -webkit-border-radius: 12px;
   -moz-border-radius: 12px;
   -ms-border-radius: 12px;
   -o-border-radius: 12px;
-  filter: drop-shadow(0px 0px 4px #ffffff);
-  -webkit-filter: drop-shadow(0px 0px 4px #ffffff);
+  filter: drop-shadow(0px 0px 3px #ffffff);
+  -webkit-filter: drop-shadow(0px 0px 3px #ffffff);
 }
 .btn-head:hover {
   background: #ffffff;
@@ -196,7 +201,7 @@ body {
 .head-twitter {
   width: 50px;
   height: 50px;
-  margin-right: 7px;
+  margin-right: 10px;
   transition: all 0.4s ease 0s;
   background-image: url(../images/icons-twitter-icon-hover.png);
   background-size: contain;
@@ -225,7 +230,7 @@ body {
 .head-opensea {
   width: 50px;
   height: 50px;
-  margin-right: 7px;
+  margin-right: 10px;
   transition: all 0.4s ease 0s;
   background-image: url(../images/icons-opensea-icon-hover.png);
   background-size: contain;
@@ -240,7 +245,7 @@ body {
 .head-etherscan {
   width: 50px;
   height: 50px;
-  margin-right: 7px;
+  margin-right: 10px;
   transition: all 0.4s ease 0s;
   background-image: url(../images/icons-etherscan-icon-hover.png);
   background-size: contain;
@@ -262,6 +267,9 @@ body {
   justify-content: center;
 }
 .main__left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   padding-right: 2%;
   padding-top: 0%;
   width: 50%;
@@ -280,7 +288,7 @@ body {
   animation: bounce-in-right 1.1s both;
 }
 .main__right img {
-  width: 55vh;
+  width: 60vh;
   border-radius: 10px;
   filter: drop-shadow(0px 0px 6px #ffffff);
   -webkit-filter: drop-shadow(0px 0px 6px #ffffff);
@@ -392,7 +400,8 @@ body {
   background-color: #000000;
   padding: 0px 40px;
   transition: all 0.4s ease 0s;
-  margin-left: auto;
+  margin-left: 15px;
+  font-family: HeyComic;
   font-size: 15px;
   font-weight: 700;
   text-transform: uppercase;
@@ -416,8 +425,8 @@ body {
   border-radius: 25px;
   background-color: #000000;
   transition: all 0.4s ease 0s;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 15px;
+  margin-right: 15px;
   font-size: 15px;
   font-weight: 700;
   text-transform: uppercase;
@@ -441,6 +450,7 @@ body {
   background-color: #000000;
   padding: 0px 40px;
   transition: all 0.4s ease 0s;
+  font-family: HeyComic;
   font-size: 15px;
   font-weight: 700;
   text-transform: uppercase;
@@ -667,6 +677,8 @@ textarea.error {
   .header__right {
     margin-top: 25px;
     margin-left: 0px;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .main {
@@ -698,6 +710,12 @@ textarea.error {
   .btn-head {
     padding-top: 17px;
     padding-bottom: 17px;
+    margin-left: 0px;
+    margin-bottom: 12px;
+  }
+
+  .head-twitter {
+    margin-right: 0px;
   }
 }
 
@@ -713,6 +731,7 @@ textarea.error {
 
   .main__left {
     padding-right: 0;
+    align-items: center;
   }
 
   .header__row {
@@ -722,6 +741,17 @@ textarea.error {
 
   .header__center {
     margin-left: 0px;
+  }
+  
+  .head-twitter {
+    margin-right: 0px;
+  }
+
+  .btn-head {
+    padding-top: 17px;
+    padding-bottom: 17px;
+    margin-left: 0px;
+    margin-bottom: 12px;
   }
 
   .number {
@@ -743,6 +773,7 @@ textarea.error {
   }
   .form-row-text {
     margin-top: 10px;
+    text-align: center;
   }
 
   .form-text-2 {
@@ -762,7 +793,7 @@ textarea.error {
   .in-form {
     border-radius: 8px;
     height: 50px;
-    width: 40vw;
+    width: 45vw;
     padding: 20px 26px;
     color: #3b2f7d;
     font-size: 15px;
